laid down the markup and basic styling for the header

--- a/app/index.html
+++ b/app/index.html
@@ -21,18 +21,31 @@
 <body>
 	
 	<header id="site-header">
-		<div class="container">
-			<a href="/" id="top-logo"></a>
+		<div class="black-strip">
+			<div class="container">
+				<div class="row">
+					<h1 class="span10 offset1">Do it. At Cotuit.</h1>
+				</div>
+			</div>
 		</div>
 		<nav>
-			<ul class="container">
-				<li><a href="#">Experience Art</a></li>
-				<li><a href="#">Support Art</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">News</a></li>
-				<li><a href="#">Contact</a></li>
+			<ul class="">
+				<li><a href="#"><span>Experience Art</span></a></li>
+				<li class="here">
+					<a href="#"><span>Support Art</span></a>
+					<ul>
+						<li><a href="#"><span>Become A Member</span></a></li>
+						<li><a href="#"><span>Become A Sponsor</span></a></li>
+						<li><a href="#"><span>Donate</span></a></li>
+						<li><a href="#"><span>Volunteer</span></a></li>
+					</ul>
+				</li>
+				<li><a href="#"><span>About Us</span></a></li>
+				<li><a href="#"><span>News</span></a></li>
+				<li><a href="#"><span>Contact</span></a></li>
 			</ul>
 		</nav>
+		<a href="/" id="top-logo"></a>
 	</header>
 
 	<!--[if lt IE 7]>
