--- a/app/index.html
+++ b/app/index.html
@@ -24,29 +24,50 @@
 		<div class="black-strip">
 			<div class="container">
 				<div class="row">
-					<h1 class="span10 offset1">Do it. At Cotuit.</h1>
+					<h1 class="span10 offset2">Do it. At Cotuit.</h1>
 				</div>
 			</div>
 		</div>
 		<nav>
-			<ul class="">
-				<li><a href="#"><span>Experience Art</span></a></li>
-				<li class="here">
-					<a href="#"><span>Support Art</span></a>
-					<ul>
-						<li><a href="#"><span>Become A Member</span></a></li>
-						<li><a href="#"><span>Become A Sponsor</span></a></li>
-						<li><a href="#"><span>Donate</span></a></li>
-						<li><a href="#"><span>Volunteer</span></a></li>
+			<div class="container">
+				<div class="row">
+					<ul class="offset2">
+						<li><a href="#"><span>Experience Art</span></a></li>
+						<li class="here">
+							<a href="#"><span>Support Art</span></a>
+							<ul>
+								<li><a href="#"><span>Become A Member</span></a></li>
+								<li><a href="#"><span>Become A Sponsor</span></a></li>
+								<li><a href="#"><span>Donate</span></a></li>
+								<li><a href="#"><span>Volunteer</span></a></li>
+							</ul>
+						</li>
+						<li><a href="#"><span>About Us</span></a></li>
+						<li><a href="#"><span>News</span></a></li>
+						<li><a href="#"><span>Contact</span></a></li>
 					</ul>
-				</li>
-				<li><a href="#"><span>About Us</span></a></li>
-				<li><a href="#"><span>News</span></a></li>
-				<li><a href="#"><span>Contact</span></a></li>
-			</ul>
+				</div>
+			</div>
 		</nav>
-		<a href="/" id="top-logo"></a>
+		<div class="container">
+			<a href="/" id="top-logo"></a>
+		</div>
 	</header>
+
+	<div class="main">
+		<div class="container">
+			<div class="row">
+				<div class="span12">
+					<p>
+						Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet veniam Duis eu commodo dolor reprehenderit non esse et dolor in commodo amet elit do veniam consectetur nulla pariatur in et commodo consequat sed cillum eiusmod in aliquip id occaecat qui Excepteur proident in ea enim tempor consequat est mollit exercitation minim deserunt qui dolore incididunt dolor et non magna voluptate velit Excepteur amet dolor occaecat exercitation et esse nulla labore minim labore officia culpa ad proident pariatur consequat Excepteur adipisicing Duis sunt veniam qui amet dolore occaecat et et cillum Excepteur Ut dolore amet veniam eu eiusmod ex dolore officia amet reprehenderit amet dolor id deserunt anim ullamco sint dolor sint dolore ullamco. 
+					</p>
+					<p>
+						Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet veniam Duis eu commodo dolor reprehenderit non esse et dolor in commodo amet elit do veniam consectetur nulla pariatur in et commodo consequat sed cillum eiusmod in aliquip id occaecat qui Excepteur proident in ea enim tempor consequat est mollit exercitation minim deserunt qui dolore incididunt dolor et non magna voluptate velit Excepteur amet dolor occaecat exercitation et esse nulla labore minim labore officia culpa ad proident pariatur consequat Excepteur adipisicing Duis sunt veniam qui amet dolore occaecat et et cillum Excepteur Ut dolore amet veniam eu eiusmod ex dolore officia amet reprehenderit amet dolor id deserunt anim ullamco sint dolor sint dolore ullamco. 
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!--[if lt IE 7]>
 	<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
