commented the 'play()' function for the slideshow for now... its anoying

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 	
+	<!-- Site Main Header and Navigation -->
 	<header id="site-header">
 		<div class="black-strip">
 			<div class="container">
@@ -28,6 +29,7 @@
 				</div>
 			</div>
 		</div>
+		<!-- Main Navigation -->
 		<nav>
 			<div class="container">
 				<div class="row">
@@ -115,20 +117,86 @@
 				</div>
 			</div>
 		</div>
-
 	</section>
 
 	<section class="main">
 		<div class="container">
 			<div class="row">
 				<div class="span12">
-					<p>
-						Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet veniam Duis eu commodo dolor reprehenderit non esse et dolor in commodo amet elit do veniam consectetur nulla pariatur in et commodo consequat sed cillum eiusmod in aliquip id occaecat qui Excepteur proident in ea enim tempor consequat est mollit exercitation minim deserunt qui dolore incididunt dolor et non magna voluptate velit Excepteur amet dolor occaecat exercitation et esse nulla labore minim labore officia culpa ad proident pariatur consequat Excepteur adipisicing Duis sunt veniam qui amet dolore occaecat et et cillum Excepteur Ut dolore amet veniam eu eiusmod ex dolore officia amet reprehenderit amet dolor id deserunt anim ullamco sint dolor sint dolore ullamco. 
-					</p>
-					<p>
-						Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet veniam Duis eu commodo dolor reprehenderit non esse et dolor in commodo amet elit do veniam consectetur nulla pariatur in et commodo consequat sed cillum eiusmod in aliquip id occaecat qui Excepteur proident in ea enim tempor consequat est mollit exercitation minim deserunt qui dolore incididunt dolor et non magna voluptate velit Excepteur amet dolor occaecat exercitation et esse nulla labore minim labore officia culpa ad proident pariatur consequat Excepteur adipisicing Duis sunt veniam qui amet dolore occaecat et et cillum Excepteur Ut dolore amet veniam eu eiusmod ex dolore officia amet reprehenderit amet dolor id deserunt anim ullamco sint dolor sint dolore ullamco. 
-					</p>
+					<div class="alert alert-block">
+						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						<span>Breaking News</span>
+						Lorem ipsum proident veniam aute sint eiusmod id adipisicing. 
+					</div>
 				</div>
+			</div>
+			<section class="row">
+				<header class="span12">
+					<h1>Experience Art</h1>
+				</header>
+			</section>
+			<div class="row">
+				<section class="span9">
+					
+					<ul class="home-panes">
+						<li class="span4">
+							<a href="#">
+								<img src="http://flickholdr.com/300/181/theater" alt="">
+								<span>Theater</span>
+							</a>
+						</li>
+						<li class="span4">
+							<a href="#">
+								<img src="http://flickholdr.com/300/181/gallery" alt="">
+								<span>Gallery</span>
+							</a>
+						</li>
+						<li class="span4">
+							<a href="#">
+								<img src="http://flickholdr.com/300/181/concert" alt="">
+								<span>Concerts</span>
+							</a>
+						</li>
+						<li class="span4">
+							<a href="#">
+								<img src="http://flickholdr.com/300/181/film" alt="">
+								<span>Film</span>
+							</a>
+						</li>
+						<li class="span4">
+							<a href="#">
+								<img src="http://flickholdr.com/300/181/classes" alt="">
+								<span>Classes</span>
+							</a>
+						</li>
+						<li class="span4">
+							<a href="#">
+								<img src="http://flickholdr.com/300/181/events" alt="">
+								<span>Special Events</span>
+							</a>
+						</li>
+					</ul>
+
+					<div class="row">
+						<div class="span8">
+							<header>
+								<h1>The Cotuit Center for the Arts</h1>
+							</header>
+							<p>
+								Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet. 
+							</p>
+							<p>
+								<a href="#" class="btn">Learn More <i class="icon-my-arrow"></i></a>
+							</p>
+						</div>
+					</div>
+
+				</section>
+				<section class="span3">
+					<p>
+						Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet. 
+					</p>
+				</section>
 			</div>
 		</div>
 	</section>
@@ -146,6 +214,7 @@
 	<!-- jQueryTools -->
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.js"></script>
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.slideshow.js"></script>
+	<script src="scripts/vendor/bootstrap/js/bootstrap-alert.js"></script>
 
 	<!-- Site Scripts -->
 	<script src="scripts/script.js"></script>
