--- a/app/index.html
+++ b/app/index.html
@@ -201,6 +201,87 @@
 		</div>
 	</section>
 
+	<footer>
+		<div class="container">
+			<div class="row">
+				<section class="span12">
+					<header>
+						<h1>Do it. At Cotuit.</h1>
+					</header>
+				</section>
+			</div>
+			<div class="row">
+				<!-- Experience Art Section -->
+				<section class="span2">
+					<header>
+						<h1>Experience Art</h1>
+					</header>
+					<ul>
+						<li><a href="#">Theater</a></li>
+						<li><a href="#">Gallery</a></li>
+						<li><a href="#">Concerts</a></li>
+						<li><a href="#">Film</a></li>
+						<li><a href="#">Classes</a></li>
+						<li><a href="#">Special Events</a></li>
+					</ul>
+				</section>
+
+				<!-- Support Art Section -->
+				<section class="span2">
+					<header>
+						<h1>Support Art</h1>
+					</header>
+					<ul>
+						<li><a href="#">Become A Member</a></li>
+						<li><a href="#">Become A Sponsor</a></li>
+						<li><a href="#">Donate</a></li>
+						<li><a href="#">Volunteer</a></li>
+					</ul>
+				</section>
+
+				<!-- About Us Section -->
+				<section class="span2">
+					<header>
+						<h1>About Us</h1>
+					</header>
+					<ul>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Become A Sponsor</a></li>
+						<li><a href="#">Donate</a></li>
+						<li><a href="#">Volunteer</a></li>
+					</ul>
+				</section>
+
+				<!-- News / Contact Section -->
+				<section class="span2">
+					<header>
+						<h1>News</h1>
+					</header>
+					<ul>
+						<li><a href="#">Latest News</a></li>
+					</ul>
+
+					<header>
+						<h1>Contact</h1>
+					</header>
+					<ul>
+						<li><a href="#">Contact Us</a></li>
+					</ul>
+				</section>
+
+				<section class="span3 offset1">
+					<p>
+						&copy; 2012 Cotuit Center for the Arts <br>
+						508-428-0669 <br>
+						4404 Falmouth Rd, Cotuit MA <br>
+						<a href="#">info@cotuitarts.org</a> <br>
+						<a href="#">Privacy Policy</a>
+					</p>
+				</section>
+			</div>
+		</div>
+	</footer>
+
 	<!--[if lt IE 7]>
 	<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
 	<![endif]-->
