Changed section sidebar to aside
to be more semantically correct.

--- a/app/index.html
+++ b/app/index.html
@@ -192,11 +192,11 @@
 					</div>
 
 				</section>
-				<section class="span3">
+				<aside class="span3">
 					<p>
 						Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet. 
 					</p>
-				</section>
+				</aside>
 			</div>
 		</div>
 	</section>
