Implemented more of the ASIDE
Added the "Become a member" section,
Added the "Connect with us" with the form + input and submit button.

Tweaked the font size on the .home-pane items.

--- a/app/index.html
+++ b/app/index.html
@@ -193,9 +193,29 @@
 
 				</section>
 				<aside class="span3">
-					<p>
-						Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet. 
-					</p>
+					<section>
+						<ul>
+							<li>Ticket Discounts.</li>
+							<li>Free Concessions.</li>
+							<li>Class Discounts.</li>
+							<li>Newsletter.</li>
+							<li><a href="#">Become a member.</a></li>
+						</ul>
+					</section>
+
+					<section>
+						<header>
+							<h1>Connect With Us</h1>
+						</header>
+
+						<form action="">
+							<label for="">Join Our Mailing List:</label>
+							<div class="input-append">
+								<input type="email" placeholder="your@email.com">
+								<button class="btn search" type="button">Go</button>
+							</div>
+						</form>
+					</section>
 				</aside>
 			</div>
 		</div>
