Implemented Sponsors Sidebar
in the home page

--- a/app/index.html
+++ b/app/index.html
@@ -90,13 +90,13 @@
 				<div class="span12">
 					<div class="slidetabs">
 						<div class="slidetab">
-							<span>Entertain.</span>
+							<span>Educate.</span>
 						</div>
 						<div class="caption">
 							<a href="#">1 Lorem ipsum veniam magna consequat Duis ut culpa laboris. </a>
 						</div>
 						<div class="slidetab">
-							<span>Educate.</span>
+							<span>Entertain.</span>
 						</div>
 						<div class="caption">
 							<a href="#">2 Lorem ipsum veniam magna consequat Duis ut culpa laboris. </a>
@@ -192,9 +192,13 @@
 					</div>
 
 				</section>
+
+				<!-- Aside Sidebar -->
 				<aside class="span3">
-					<section>
-						<ul>
+
+					<!-- Become a Member -->
+					<section class="row">
+						<ul class="span3">
 							<li>Ticket Discounts.</li>
 							<li>Free Concessions.</li>
 							<li>Class Discounts.</li>
@@ -203,12 +207,13 @@
 						</ul>
 					</section>
 
-					<section>
-						<header>
+					<!-- Connect with us -->
+					<section class="row">
+						<header class="span3">
 							<h1>Connect With Us</h1>
 						</header>
 
-						<form action="">
+						<form action="" class="span3">
 							<label for="">Join Our Mailing List:</label>
 							<div class="input-append">
 								<input type="email" placeholder="your@email.com">
@@ -216,6 +221,27 @@
 							</div>
 						</form>
 					</section>
+
+					<!-- Featured Sponsors -->
+					<section class="row">
+						<header class="span3">
+							<h1>Featured Sponsors</h1>
+						</header>
+
+						<div class="sponsor-box span3">
+							<ul class="thumbnails">
+								<li class="top"><a href="#" class="thumbnail"><img src="http://flickholdr.com/240/240/beer" alt=""></a></li>
+							</ul>
+							<ul class="thumbnails">
+								<li><a href="#" class="thumbnail"><img src="http://flickholdr.com/119/119/winery" alt=""></a></li>
+								<li><a href="#" class="thumbnail"><img src="http://flickholdr.com/119/119/landscape" alt=""></a></li>
+								<li><a href="#" class="thumbnail"><img src="http://flickholdr.com/119/119/painting" alt=""></a></li>
+								<li><a href="#" class="thumbnail"><img src="http://flickholdr.com/119/119/nursing" alt=""></a></li>
+							</ul>
+							<a href="#" class="btn">Become a Sponsor <i class="icon-my-arrow"></i></a>
+						</div>
+					</section>
+
 				</aside>
 			</div>
 		</div>
