--- a/app/index.html
+++ b/app/index.html
@@ -63,24 +63,24 @@
 
 		<div class="slides container">
 			
-			<!-- First slide -->
+			<!-- Educate slide -->
 			<div class="slide">
-				<img src="images/hero-photo.jpg" alt="">
+				<img src="images/slide-educate.jpg" alt="" width="1000">
 			</div>
 
-			<!-- Second slide -->
+			<!-- Entertain slide -->
 			<div class="slide">
-				<img src="images/hero-photo-bw.jpg" alt="">
+				<img src="images/slide-entertain.jpg" alt="" width="1000">
 			</div>
 
-			<!-- Third slide -->
+			<!-- Illuminate slide -->
 			<div class="slide">
-				<img src="images/hero-photo.jpg" alt="">
+				<img src="images/slide-illuminate.jpg" alt="" width="1000">
 			</div>
 
-			<!-- Fourth slide -->
+			<!-- Inspire slide -->
 			<div class="slide">
-				<img src="images/hero-photo-bw.jpg" alt="">
+				<img src="images/slide-inspire.jpg" alt="" width="1000">
 			</div>
 
 		</div>
@@ -141,37 +141,37 @@
 					<ul class="home-panes">
 						<li class="span4">
 							<a href="#">
-								<img src="http://flickholdr.com/300/181/theater" alt="">
+								<img src="images/theater.jpg" alt="">
 								<span>Theater</span>
 							</a>
 						</li>
 						<li class="span4">
 							<a href="#">
-								<img src="http://flickholdr.com/300/181/gallery" alt="">
+								<img src="images/gallery.jpg" alt="">
 								<span>Gallery</span>
 							</a>
 						</li>
 						<li class="span4">
 							<a href="#">
-								<img src="http://flickholdr.com/300/181/concert" alt="">
+								<img src="images/concerts.jpg" alt="">
 								<span>Concerts</span>
 							</a>
 						</li>
 						<li class="span4">
 							<a href="#">
-								<img src="http://flickholdr.com/300/181/film" alt="">
+								<img src="images/film.jpg" alt="">
 								<span>Film</span>
 							</a>
 						</li>
 						<li class="span4">
 							<a href="#">
-								<img src="http://flickholdr.com/300/181/classes" alt="">
+								<img src="images/classes.jpg" alt="">
 								<span>Classes</span>
 							</a>
 						</li>
 						<li class="span4">
 							<a href="#">
-								<img src="http://flickholdr.com/300/181/events" alt="">
+								<img src="images/events.jpg" alt="">
 								<span>Special Events</span>
 							</a>
 						</li>
