Started implementing the home page events calendar

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="styles/main.css"/>
+	<link rel='stylesheet' type='text/css' href='styles/fullcalendar/fullcalendar.css' />
+
 	<script src="scripts/vendor/modernizr/modernizr.js"></script>
 </head>
 <body>
@@ -114,6 +116,19 @@
 							<a href="#">4 Lorem ipsum veniam magna consequat Duis ut culpa laboris. </a>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="span12">
+					<section class="floating-calendar">
+						<header>
+							<h1>Upcoming Events</h1>
+						</header>
+						<div class="calendar"></div>
+					</section>
 				</div>
 			</div>
 		</div>
@@ -342,6 +357,7 @@
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.js"></script>
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.slideshow.js"></script>
 	<script src="scripts/vendor/bootstrap/js/bootstrap-alert.js"></script>
+	<script src="scripts/vendor/fullcalendar/fullcalendar.js"></script>
 
 	<!-- Site Scripts -->
 	<script src="scripts/script.js"></script>
