Replaced fullcalendat "Upcoming Events" implementation with jQuery UI Datepicker
I implemented a few custom functions to augument the datepicker
functionality.

Reference:
http://stackoverflow.com/questions/5578259/jquery-ui-datepicker-how-to-a
dd-clickable-events-on-particular-dates

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="styles/main.css"/>
-	<link rel='stylesheet' type='text/css' href='styles/fullcalendar/fullcalendar.css' />
 
 	<script src="scripts/vendor/modernizr/modernizr.js"></script>
 </head>
@@ -350,14 +349,15 @@
 	<!-- Add your site or application content here -->
 	<script src="scripts/vendor/jquery/jquery.min.js"></script>
 
-	<!-- Bootstrap Scripts -->
-	
+	<!-- jQuery UI Scripts -->
+	<script src="scripts/vendor/jquery-ui/ui/jquery-ui.js"></script>
+	<script src="scripts/vendor/jquery-ui/ui/jquery.ui.datepicker.js"></script>
 
 	<!-- jQueryTools -->
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.js"></script>
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.slideshow.js"></script>
 	<script src="scripts/vendor/bootstrap/js/bootstrap-alert.js"></script>
-	<script src="scripts/vendor/fullcalendar/fullcalendar.js"></script>
+	
 
 	<!-- Site Scripts -->
 	<script src="scripts/script.js"></script>
