Added a basic template without sidebars and the sponsors page
With different levels of sponsorship and the images/sponsors

--- a/app/index.html
+++ b/app/index.html
@@ -94,25 +94,25 @@
 							<span>Educate.</span>
 						</div>
 						<div class="caption">
-							<a href="#">1 Lorem ipsum veniam magna consequat Duis ut culpa laboris. </a>
+							<span>Classes, workshops and outreach. </span>
 						</div>
 						<div class="slidetab">
 							<span>Entertain.</span>
 						</div>
 						<div class="caption">
-							<a href="#">2 Lorem ipsum veniam magna consequat Duis ut culpa laboris. </a>
+							<span>Theater, Music and Special Events. </span>
 						</div>
 						<div class="slidetab">
 							<span>Illuminate.</span>
 						</div>
 						<div class="caption">
-							<a href="#">3 Lorem ipsum veniam magna consequat Duis ut culpa laboris. </a>
+							<span>Beautiful Art in Beautiful Spaces. </span>
 						</div>
 						<div class="slidetab">
 							<span>Inspire.</span>
 						</div>
 						<div class="caption">
-							<a href="#">4 Lorem ipsum veniam magna consequat Duis ut culpa laboris. </a>
+							<span>Art is Essential. </span>
 						</div>
 					</div>
 				</div>
