Minor update to create a link to interior pages

--- a/app/index.html
+++ b/app/index.html
@@ -197,8 +197,31 @@
 								<h1>The Cotuit Center for the Arts</h1>
 							</header>
 							<p>
-								Lorem ipsum veniam sed Duis laboris ullamco est velit irure mollit officia magna laborum tempor proident ut labore eiusmod in in sed ut incididunt irure dolor quis laboris est id ad aliquip nostrud in ullamco ad magna in occaecat occaecat ad et pariatur anim Excepteur dolor voluptate non veniam nulla fugiat reprehenderit velit ut ex ullamco exercitation sunt voluptate ut esse commodo elit velit in ut esse sint fugiat fugiat cillum tempor proident Duis enim et cillum incididunt proident minim nulla mollit quis non ullamco Excepteur voluptate dolore elit sunt voluptate consectetur do quis amet. 
+								These are the links view the current templates: 
 							</p>
+							<ul>
+								<li>
+									<a href="index.html">Home Page (this page)</a>
+								</li>
+								<li>
+									<a href="page_with_sidebar.html">Generic page with sidebar</a>
+								</li>
+								<li>
+									<a href="page_without_sidebar.html">Generic page without sidebar</a>
+								</li>
+								<li>
+									<a href="sponsors_page.html">Sponsors Page</a>
+								</li>
+								<li>
+									<a href="contact_form.html">Contact Us, that will be use as basis for other site forms</a>
+								</li>
+								<li>
+									<a href="blog_listing.html">News/Blog listing</a>
+								</li>
+								<li>
+									<a href="blog_detail.html">News/Blog detail</a>
+								</li>
+							</ul>
 							<p>
 								<a href="#" class="btn">Learn More <i class="icon-my-arrow"></i></a>
 							</p>
