added social links

--- a/app/index.html
+++ b/app/index.html
@@ -257,6 +257,12 @@
 								<button class="btn search" type="button">Go</button>
 							</div>
 						</form>
+
+						<div class="span3">
+							<a href="#" class="social-icons fb-icon"></a>
+							<a href="#" class="social-icons tw-icon"></a>
+							<a href="#" class="social-icons yt-icon"></a>
+						</div>
 					</section>
 
 					<!-- Featured Sponsors -->
