Various changes to the script and style

--- a/app/events_listing.html
+++ b/app/events_listing.html
@@ -108,11 +108,20 @@
 											<p>
 												Jerome Kilty’s comedy-drama adapted from the volatile 4-decade correspondence between playwright George Bernard Shaw and Mrs. Patrick Campbell, the actress who originated the role of  Eliza Doolittle.
 											</p>
+											<div class="extended">
+												<p>
+													Nullam id dolor id nibh ultricies vehicula ut id elit. Cras mattis consectetur purus sit amet fermentum. Vestibulum id ligula porta felis euismod semper. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue.
+												</p>
+												<p>
+													Nullam id dolor id nibh ultricies vehicula ut id elit. Cras mattis consectetur purus sit amet fermentum. Vestibulum id ligula porta felis euismod semper. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue.
+												</p>
+											</div>
 										</div>
 									</div>
 
 									<div class="row">
 										<div class="span5">
+											<a href="#" class="btn read-full" > Read more </a>
 											<a href="#" class="btn">Buy Tickets <i class="icon-my-arrow"></i></a>
 										</div>
 									</div>
