Fixed sidebar styling

--- a/app/page_with_sidebar.html
+++ b/app/page_with_sidebar.html
@@ -100,6 +100,20 @@
 						</header>
 						<div class="aside-calendar span3">
 							<div class="calendar"></div>
+							<div class="program-list-container">
+								<select id="program-list-select" data-placeholder="Show &amp; Search Events" style="width: 100%">
+									<option value=""></option>
+									<optgroup label="Theater">
+										<option value="1">Printmaking 101: The Collagraph Print</option>
+										<option value="2">Advanced Acting for Teens & Adults</option>
+									</optgroup>
+									<optgroup label="Classes">
+										<option value="3">Love Letters: A Benefit for Cotuit Center for the Arts</option>
+										<option value="4">DDD</option>
+										<option value="5">EEE</option>
+									</optgroup>
+								</select>
+							</div>
 						</div>
 					</section>
 
@@ -250,6 +264,9 @@
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.js"></script>
 	<script src="scripts/vendor/jquerytools/src/tabs/tabs.slideshow.js"></script>
 	<script src="scripts/vendor/bootstrap/js/bootstrap-alert.js"></script>
+
+	<!-- Chosen Js -->
+	<script src="scripts/vendor/chosen/chosen/chosen.jquery.min.js"></script>
 	
 
 	<!-- Site Scripts -->
