--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
     <meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<title></title>
-	<meta name="description" content=""/>
-	<meta name="viewport" content="width=device-width"/>
+	<meta name="description" content="Cotuit Center For The Arts"/>
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
